# ai-dev-tools-zoomcamp

./: index.html
.github/workflows/: deploy.yml
TODO/: db.sqlite3  pyproject.toml
TODO/tests/: test_todo_app.py
TODO/todo_app/: models.py  tests.py  urls.py  views.py
TODO/todo_app/migrations/: 0001_initial.py
TODO/todo_app/templates/todo_app/: base.html  home.html  resolved_todos.html  todo_detail.html
TODO/todo_project/: settings.py  urls.py
assets/: index-CgZ40jsr.js  index-DAglFGDL.css
hw1/snake-game/backend/: db.sqlite3  manage.py
hw1/snake-game/backend/game/: models.py  serializers.py  urls.py  views.py
hw1/snake-game/backend/game/migrations/: 0001_initial.py
hw1/snake-game/backend/snakegame/: asgi.py  settings.py  urls.py  wsgi.py
hw1/snake-game/frontend/: package-lock.json
hw1/snake-game/frontend/src/: App.jsx
hw2/: AGENTS.md  Answers.md  product_requirements_description.md
hw2/online-interview-platform/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
hw2/online-interview-platform/.github/workflows/: deploy.yml
hw2/online-interview-platform/backend/: main.py  pyproject.toml  test_integration.py
hw2/online-interview-platform/frontend/: index.html  package-lock.json  vite.config.js
hw2/online-interview-platform/frontend/src/: App.css  App.jsx
hw3/: clean_filenames.py  count_data.py  index_files.py  pyproject.toml  q5.md  search.py  server.py  test.py  test_search_tool.py
